--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,119 +10,59 @@
  * governing permissions and limitations under the License.
  */
 
-:root {
+ :root {
   /* colors */
-  --link-color: #202020;
-  --link-hover-color: #666;
-  --link-selected-color: #3C3C3C;
-  --link-text-color: #eee;
-  --text-color-light: var(--link-text-color);
-  --background-color: rgb(4 25 45 / 55%);
-  --background-color-light: #fff;
+  --color-yellow: #ffea00;
+  --link-color: black;
+  --link-hover-color: black;
+  --background-color: #fff;
   --overlay-background-color: #eee;
-  --highlight-background-color: #ffc719;
-  --text-color: #000;
-  --background-color-nav: rgb(255 255 255 / 95%);
-  --nav-color: #fff;
-  --background-color-dark: #000;
-  --background-color-transparent: rgb(0 0 0 / 60%);
-  --focus: hsl(60deg 1% 43%);
-  --input-background: #fff;
-  --button-background-color: #000;
-  --button-text-color: #fff;
-  --button-border-radius: 5px;
-  --button-padding: 5px 10px;
-  --icon-visibility: none;
+  --highlight-background-color: #ccc;
+  --text-color: #202020;
+  --text-color-light: #ebebeb;
+  --heading-highlight-color: #ffea00;
+  --overlay-text-color: var(--text-color);
+  --highlight-text-color: var(--text-color);
 
   /* fonts */
-  --body-font-family: adobe-clean-light, 'helvetica neue', helvetica, ubuntu, roboto, noto, sans-serif;
-  --heading-font-family: adobe-clean-regular, 'helvetica neue', helvetica, ubuntu, roboto, noto, sans-serif;
+  --body-font-family: 'Source Sans Pro', 'helvetica neue', helvetica, ubuntu, roboto, noto, sans-serif;
+  --heading-font-family: asar, georgia, 'Times New Roman', times, serif;
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
 
   /* body sizes */
   --body-font-size-m: 22px;
   --body-font-size-s: 18px;
-  --body-font-size-xs: 16px;
-  --body-font-size-xxs: 12px;
+  --body-font-size-xs: 14px;
 
   /* heading sizes */
-  --heading-font-size-xxl: 32px;
-  --heading-font-size-xl: 24px;
-  --heading-font-size-l: 22px;
-  --heading-font-size-m: 20px;
-  --heading-font-size-s: 18px;
-  --heading-font-size-xs: 16px;
-
-  /* Headings (Consonant) */
-  --type-heading-xxxl-lh: 1px;
-  --type-heading-xxl-lh: 1px;
-  --type-heading-xl-lh: 35px;
-  --type-heading-l-lh: 30px;
-  --type-heading-m-lh: 25px;
-  --type-heading-s-lh: 20px;
-  --type-heading-xs-lh: 22px;
+  --heading-font-size-xxl: 40px;
+  --heading-font-size-xl: 36px;
+  --heading-font-size-l: 32px;
+  --heading-font-size-m: 24px;
+  --heading-font-size-s: 20px;
+  --heading-font-size-xs: 18px;
 
   /* nav height */
-  --nav-height: 89px;
-  --hero-height: 60vh;
-  --article-hero-height:30vh;
-  --h3-padding: 0 10px;
+  --nav-height: 115px;
 
-  /* Spacing (Consonant) */
-  --spacing-xxxs: 4px;
-  --spacing-xxs: 8px;
-  --spacing-xs: 16px;
-  --spacing-s: 24px;
-  --spacing-m: 32px;
-  --spacing-ml: 40px;
-  --spacing-l: 48px;
-  --spacing-xl: 56px;
-  --spacing-xxl: 80px;
-  --spacing-xxxl: 104px;
+  /* buttons */
+  --button-background-color: var(--color-yellow);
+  --button-border-radius: 0;
+  --button-text-color: var(--text-color);
+  --button-padding: 1em 2.5em;
 
-}
-
-@media (min-width: 600px) {
-  :root {
-    --heading-font-size-xxl: 42px;
-    --heading-font-size-xl: 38px;
-    --heading-font-size-l: 32px;
-    --heading-font-size-m: 28px;
-    --heading-font-size-s: 18px;
-    --heading-font-size-xs: 16px;
-    --hero-height:70vh;
-    --article-hero-height:40vh;
-  }
-}
-
-@media (min-width: 900px) {
-  :root {
-    --heading-font-size-xxl: 60px;
-    --heading-font-size-xl: 48px;
-    --heading-font-size-l: 36px;
-    --heading-font-size-m: 30px;
-    --heading-font-size-s: 24px;
-    --heading-font-size-xs: 22px;
-    --hero-height:90vh;
-    --article-hero-height:40vh;
-  }
-}
-
-@media (min-width: 1200px) {
-  :root {
-    --h3-padding: 0;
-  }
+  /* default content */
+  --default-text-align: left;
 }
 
 body {
-  font-size: 16px;
+  font-size: var(--body-font-size-m);
   margin: 0;
   font-family: var(--body-font-family);
-  line-height: 22px;
+  line-height: 1.6;
   color: var(--text-color);
-  background-color: var(--background-color-light);
+  background-color: var(--background-color);
   display: none;
-  overflow-x: hidden;
 }
 
 body.appear {
@@ -130,17 +70,21 @@ body.appear {
 }
 
 header {
-  height: var(--nav-height);
+  height: calc(var(--nav-height) + 25px);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+main {
+  text-align: var(--default-text-align);
+}
+
+.hidden {
+  display: none;
+}
+
+h1, h2, h3,
+h4, h5, h6 {
   font-family: var(--heading-font-family);
-  font-weight: 600;
+  font-weight: 400;
   line-height: 1.25;
   margin-top: 1em;
   margin-bottom: .5em;
@@ -148,79 +92,43 @@ h6 {
 }
 
 h1 {
+  font-weight: 400;
+  margin-top: 27px;
+  margin-bottom: 13.5px;
   font-size: var(--heading-font-size-xxl);
-  text-shadow: 1px 1px 2px #000;
 }
 
-h2 {
-  font-size: var(--heading-font-size-l);
-}
-
-h3 {
-  font-size: var(--heading-font-size-l);
-  padding: var(--h3-padding);
-  color: #000;
-}
-
-h4 {
-  font-size: var(--heading-font-size-m);
-}
-
-.underline h3::after {
-  border-bottom: 2px solid var(--highlight-background-color);
-  content: "";
+body.activity h1::after {
   display: block;
-  padding-top: 8px;
   width: 84px;
+  padding-top: 8px;
+  content: "";
+  border-bottom: 2px solid var(--color-yellow);
 }
 
-h5 {
-  font-size: var(--heading-font-size-s)
+body.article h2::after {
+  display: block;
+  width: 84px;
+  padding-top: 8px;
+  content: "";
+  border-bottom: 2px solid var(--heading-highlight-color);
 }
 
-h6 {
-  font-size: var(--heading-font-size-xs)
-}
+h2 { font-size: var(--heading-font-size-xl) }
+h3 { font-size: var(--heading-font-size-l) }
+h4 { font-size: var(--heading-font-size-m) }
+h5 { font-size: var(--heading-font-size-s) }
+h6 { font-size: var(--heading-font-size-xs) }
 
-p,
-dl,
-ol,
-ul,
-pre,
-blockquote {
+p, dl, ol, ul, pre, blockquote {
   margin-top: 1em;
   margin-bottom: 1em;
 }
 
-hr {
-  margin-top: 1.5em;
-  margin-bottom: 1.5em;
-  border: 0;
-  border-bottom: 1px solid var(--overlay-background-color);
-}
-
-code,
-pre,
-samp {
-  font-family: var(--fixed-font-family);
-  font-size: var(--body-font-size-s);
-}
-
-code,
-samp {
-  padding: .125em;
-}
-
-pre {
-  overflow: scroll;
-}
-
-main pre {
-  background-color: var(--overlay-background-color);
-  padding: 1em;
-  border-radius: .25em;
-  overflow-x: auto;
-  white-space: pre;
+body p {
+  margin: 0 0 13.5px;
+  font-size: 18px;
+  line-height: 2.5;
 }
 
 a:any-link {
@@ -233,47 +141,67 @@ a:hover {
   color: var(--link-hover-color);
 }
 
+code, pre, samp {
+  font-family: var(--fixed-font-family);
+  font-size: var(--body-font-size-s);
+}
+
+code, samp {
+  padding: .125em;
+}
+
+pre {
+  overflow: scroll;
+}
+
 /* buttons */
-a.button:any-link,
-button {
+
+a.button:any-link, button {
+  color: var(--button-text-color);
+  background-color: var(--button-background-color);
+  text-transform: uppercase;
+  font-size: 14px;
+  padding: var(--button-padding);
+  font-weight: 600;
   font-family: var(--body-font-family);
   display: inline-block;
   box-sizing: border-box;
   text-decoration: none;
   border: 2px solid transparent;
-  padding: 5px 30px;
   text-align: center;
   font-style: normal;
-  font-weight: 600;
   cursor: pointer;
-  color: var(--link-text-color);
-  background-color: var(--link-color);
   margin: 16px 0;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  border-radius: 3px;
+  border-radius: var(--button-border-radius);
+  line-height: 1.5;
 }
 
-a.button:hover,
-a.button:focus,
-button:hover,
-button:focus {
-  background-color: var(--link-hover-color);
+a.button:hover, a.button:focus, button:hover, button:focus  {
+  /* background-color: var(--link-hover-color); */
   cursor: pointer;
 }
 
-button:disabled,
-button:disabled:hover {
-  background-color: var(--overlay-background-color);
+button:disabled, button:disabled:hover {
+  /* background-color: var(--overlay-background-color); */
   cursor: unset;
 }
 
-a.button.secondary,
-button.secondary {
+a.button.secondary, button.secondary {
   background-color: unset;
   border: 2px solid currentcolor;
-  color: var(--text-color)
+  color: unset;
+}
+
+body.activity main {
+  display: grid;
+  grid-template-columns: 25% 75%;
+  grid-template-areas:
+    "bread bread"
+    "hero hero"
+    "left main";
 }
 
 main input {
@@ -287,79 +215,127 @@ main input {
   box-sizing: border-box;
   border: 1px solid var(--text-color);
   color: var(--text-color);
-  background-color: var(--input-background);
+  background-color: var(--background-color);
 }
 
 main input:hover {
   border: 1px solid var(--text-color);
 }
 
+main .section {
+  padding: 64px 16px;
+}
+
+main pre {
+  background-color: var(--overlay-background-color);
+  padding: 1em;
+  border-radius: .25em;
+  overflow-x: auto;
+  white-space: pre;
+}
+
 main blockquote {
-  font-style: italic;
+  color: var(--blockquote-color);
+  background-color: var(--blockquote-background-color);
+  font-family: var(--heading-font-family);
   margin: 3rem;
   text-indent: -1rem;
   hanging-punctuation: first;
 }
 
-main blockquote p::before {
-  content: "“";
-  line-height: 0;
+hr {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+  border: 0;
+  border-bottom: 1px solid var(--overlay-background-color);
 }
 
-main blockquote p::after {
-  content: "”";
-  line-height: 0;
-}
-
-main img {
+img {
   max-width: 100%;
   width: auto;
   height: auto;
 }
 
-.icon {
-  display: inline-block;
-  fill: var(--nav-color);
-  height: 24px;
-  width: 24px;
-}
-
-.icon svg {
-  height: 100%;
-  width: 100%;
-}
-
-main .section {
-  padding: 32px 0;
-  margin: 0;
-  background-color: #fff;
-  top: 0;
-}
-
-
-/* main:has(.section.overview), main:has(.section.itinerary), main:has(.section.what-to-bring) {
-  display: flex;
-  flex-direction: row;
-} */
-
 @media (min-width: 600px) {
   main .section {
-    padding: 32px 0;
+    padding: 64px 32px;
   }
 }
 
 @media (min-width: 900px) {
-  .section>div {
+  :root {
+    --heading-font-size-xxl: 40px;
+    --heading-font-size-xl: 36px;
+    --heading-font-size-l: 36px;
+    --heading-font-size-m: 30px;
+    --heading-font-size-s: 24px;
+    --heading-font-size-xs: 22px;
+  }
+
+  .section > div {
     max-width: 1200px;
     margin: auto;
   }
 }
 
-/* section metadata */
 main .section.highlight {
   background-color: var(--highlight-background-color);
+  color: var(--highlight-text-color);
 }
 
-body.noscroll {
-  overflow: hidden;
+main .section.overlay {
+  background-color: var(--overlay-background-color);
+  color: var(--highlight-text-color);
+}
+
+main .section.full-bleed {
+  padding: 0;
+}
+
+main .section.full-bleed > div {
+  max-width: unset;
+}
+
+.icon-wknd-logo-dk {
+  display: inline-block;
+  width:128px;
+  margin-top: 14px;
+  margin-bottom: 7px;
+}
+
+.icon-wknd-logo-light {
+  display: inline-block;
+  width:128px;
+  margin-top: 14px;
+  margin-bottom: 7px;
+}
+
+/* progressive section appearance */
+main .section[data-section-status='loading'],
+main .section[data-section-status='initialized'] {
+  display: none;
+}
+
+/* cookie consent styles */
+.cc-window.cc-banner.cc-theme-block {
+  padding: 12px 10px;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  font-family: var(--body-font-family);
+}
+
+.cc-highlight .cc-btn.cc-customize, .cc-policies-links.cc-link {
+  color: var(--highlight-text-color);
+}
+
+.cc-highlight .cc-btn+.cc-btn {
+  padding: 13px 29px;
+  background-color: var(--highlight-background-color);
+  color: var(--highlight-text-color);
+  text-transform: uppercase;
+  border-style: none;
+}
+
+.cc-btn.cc-save {
+  padding: 13px 29px;
 }
