--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -114,7 +114,7 @@ header nav .nav-sections {
   flex-direction: column;
   display: none;
   background-color: var(--overlay-color);
-  flex: 1 1 auto;
+  /* flex: 1 1 auto; */
 }
 
 header nav .nav-sections ul  {
