--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -114,6 +114,7 @@ header nav .nav-sections {
   flex-direction: column;
   display: none;
   background-color: var(--overlay-color);
+  /* RUG */
   /* flex: 1 1 auto; */
 }
 
@@ -165,6 +166,11 @@ header nav[aria-expanded='true'] .nav-tools li {
     justify-content: space-between;
     height: var(--nav-height);
     padding: 16px;
+
+    /* RUG */
+    background-color: black;
+    color: white;
+
   }
 
   header nav .nav-sections > ul > li.nav-drop {
