--- a/styles/styles.css
+++ b/styles/styles.css
@@ -162,7 +162,9 @@ pre {
 
 a.button:any-link, button {
   color: var(--button-text-color);
-  background-color: var(--button-background-color);
+  /* RUG */
+  /* background-color: var(--button-background-color); */
+  background-color: white;
   text-transform: uppercase;
   font-size: 14px;
   padding: var(--button-padding);
