--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -8,7 +8,9 @@
 }
 
 .cards > ul > li {
-    border: 1px solid var(--highlight-background-color);
+    /* RUG */
+    /* border: 1px solid var(--highlight-background-color); */
+    
     background-color: var(--background-color)
 }
 
@@ -25,7 +27,10 @@
 }
 
 .cards > ul > li img {
-    width: 100%;
+    /* RUG */
+    /* width: 100%; */
+    height: 100%;
+
     aspect-ratio: 4 / 3;
     object-fit: cover;
 }
