--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -22,6 +22,8 @@
 
 }
 
+
+
 .cards .cards-card-body {
     margin: 16px;
     /* RUG */
@@ -41,6 +43,7 @@
     /* RUG */
     /* width: 100%; */
     height: 100%;
+    list-style: none;
 
     aspect-ratio: 4 / 3;
     object-fit: cover;
@@ -58,6 +61,7 @@
     scroll-behavior: smooth;
     display: flex;
     padding-bottom: 16px;
+    
 }
 
 .cards.scroll > ul > li{
