--- a/styles/styles.css
+++ b/styles/styles.css
@@ -127,9 +127,13 @@ h5 { font-size: var(--heading-font-size-s) }
 h6 { font-size: var(--heading-font-size-xs) }
 
 p, dl, ol, ul, pre, blockquote {
+  
   margin-top: 1em;
   margin-bottom: 1em;
 }
+
+/* RUG */
+li { list-style-type: none }
 
 body p {
   margin: 0 0 13.5px;
